// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 checkbox-color-blue -clickable"
  >
    <div
      className="uui-checkbox"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container root size-18 checkbox-color-blue -clickable"
  >
    <div
      className="uui-checkbox"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should be rendered correctly with props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container root size-18 checkbox-color-blue uui-disabled"
  >
    <div
      className="uui-checkbox"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container root size-18 checkbox-color-blue uui-disabled"
  >
    <div
      className="uui-checkbox"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;
